Feat: Vital 그래프 라이브러리 교체, 부모 class 구성
1. MPAndroidChart Library
graphView 이용 시 X축 날짜 라벨이 고정되지 않고, 중복이나 누락이 심해서 MPAndroidChart로 교체함.

2. Vital Chart Fragment 추가
공통 기능, UI를 사용하기 때문에 추가해보았습니다.
데이터 유형을 다루는 함수를 제외하고 (fetchData, setChartData, analyzeData, addData),
UI초기화, 조회 범위 변경 등 같은 UI 파일, 함수를 사용했습니다.

--- a/app/src/main/res/layout/fragment_step.xml
+++ b/app/src/main/res/layout/fragment_step.xml
@@ -14,7 +14,8 @@
         android:background="@drawable/shape_radius_square_stroke_r5dp"
         android:backgroundTint="@color/secondary"
         android:orientation="horizontal"
-        android:paddingVertical="6dp"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,7 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
             android:gravity="center"
+            android:paddingVertical="4dp"
             android:text="@string/range_a_day" />
 
         <TextView
@@ -32,7 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
+            android:backgroundTint="@color/secondary"
             android:gravity="center"
+            android:paddingVertical="4dp"
             android:text="@string/range_a_week" />
 
         <TextView
@@ -40,7 +46,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
+            android:backgroundTint="@color/secondary"
             android:gravity="center"
+            android:paddingVertical="4dp"
             android:text="@string/range_a_month" />
 
         <TextView
@@ -48,7 +57,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/shape_radius_square_stroke_r5dp"
+            android:backgroundTint="@color/secondary"
             android:gravity="center"
+            android:paddingVertical="4dp"
             android:text="@string/range_a_year" />
     </LinearLayout>
 
@@ -146,6 +158,16 @@
             android:text="@string/add_data" />
     </LinearLayout>
 
+    <com.github.mikephil.charting.charts.CombinedChart
+        android:id="@+id/step_bar_chart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chart_period_TV"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="8dp"/>
 
     <com.jjoe64.graphview.GraphView
         android:id="@+id/graphView2"
@@ -156,7 +178,8 @@
         app:layout_constraintTop_toBottomOf="@id/chart_period_TV"
         app:layout_constraintDimensionRatio="1:1"
         android:layout_marginHorizontal="8dp"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="8dp"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
