--- a/app/src/main/res/drawable/shape_circle.xml
+++ b/app/src/main/res/drawable/shape_circle.xml
@@ -3,8 +3,7 @@
     android:shape="oval">
 
     <corners android:radius="10dp"/>
-    <stroke android:color="@color/black"
-        android:width="3dp"/>
+    <solid android:color="@color/secondary"/>
     <size android:width="100dp"
         android:height="100dp"/>
 
