--- a/app/src/main/res/layout/fragment_diet_today.xml
+++ b/app/src/main/res/layout/fragment_diet_today.xml
@@ -248,7 +248,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginEnd="24dp"
-            android:background="@drawable/shape_circle_stroke"
+            android:background="@drawable/shape_circle"
             android:backgroundTint="@color/secondary"
             android:gravity="center"
             android:text="\?"
