--- a/app/src/main/res/layout/view_dosage_schedule_item.xml
+++ b/app/src/main/res/layout/view_dosage_schedule_item.xml
@@ -59,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:checked="false"
             android:text="알람"
             app:layout_constraintBottom_toBottomOf="@id/dosage_schedule_dosage_amount"
             app:layout_constraintEnd_toEndOf="parent" />
