--- a/app/src/main/res/layout/fragment_dosage_schedule.xml
+++ b/app/src/main/res/layout/fragment_dosage_schedule.xml
@@ -151,6 +151,7 @@
                 android:id="@+id/med_search_div_line"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
+                android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/dosage_med_search_LL"></View>
@@ -160,7 +161,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/shape_roundsq_stroke"
@@ -169,7 +169,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/med_search_div_line">
+                app:layout_constraintTop_toBottomOf="@+id/med_search_div_line"
+                app:layout_constraintVertical_bias="0.0">
 
                 <TextView
                     android:id="@+id/med_no_search_result_TV"
