--- a/app/src/main/res/layout/view_dosage_schedule_item.xml
+++ b/app/src/main/res/layout/view_dosage_schedule_item.xml
@@ -15,12 +15,14 @@
 
         <TextView
             android:id="@+id/dosage_schdule_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:text="약물 이름"
-            android:textSize="16sp"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toStartOf="@+id/dosage_schedule_period"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
