--- a/app/src/main/res/layout/view_diet_today_nutritions.xml
+++ b/app/src/main/res/layout/view_diet_today_nutritions.xml
@@ -47,14 +47,22 @@
         app:layout_constraintWidth_percent="0.4"
         app:srcCompat="@drawable/face" />
 
-    <LinearLayout
-        android:id="@+id/nutrients_LL"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:clipToPadding="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/today_diet_status_IV">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/nutrients_LL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:orientation="vertical">
+
+        </LinearLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
