--- a/app/src/main/res/layout/view_today_nutrition_item.xml
+++ b/app/src/main/res/layout/view_today_nutrition_item.xml
@@ -12,11 +12,14 @@
         <variable
             name="suggested"
             type="int" />
+        <variable
+            name="isSimple"
+            type="Boolean" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="16dp">
+        android:layout_marginVertical="8dp">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/nut_item_guide"
@@ -38,9 +41,9 @@
             android:id="@+id/nut_item_values_LL"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginEnd="16dp"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintEnd_toEndOf="parent">
 
             <TextView
                 android:id="@+id/nut_item_value_TV"
@@ -59,10 +62,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_radius_square_stroke"
+            android:clipChildren="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/nut_item_values_LL"
-            android:clipChildren="true">
+            app:layout_constraintTop_toBottomOf="@id/nut_item_values_LL">
 
             <com.github.mikephil.charting.charts.HorizontalBarChart
                 android:id="@+id/barChart"
